# workflow-app

./: .gitignore  CLAUDE.md  Cargo.toml  LEARNINGS.md
.claude/: README.md  settings.json
.claude/commands/: project-blueprint.md  project-deploy.md  project-execute.md  project-init.md  project-module.md  project-research.md  project-review.md  project-security-review.md  project-spec.md  project-status.md  project-test.md  project-tracks.md
.claude/hooks/: pre-compact.sh
.claude/lib/: dispatch.sh  project-tracks.sh  scrub-secrets.sh
.claude/parallel/: tracks.json
.claude/skills/project-blueprint/: SKILL.md
.claude/skills/project-deploy/: SKILL.md
.claude/skills/project-execute/: SKILL.md  (+2 more)
.kit-orchestration/: .gitignore
crates/code-maps/: Cargo.toml
crates/code-maps/src/: error.rs  lib.rs  render.rs  types.rs
crates/code-maps/src/lang/: common.rs  go.rs  javascript.rs  mod.rs  python.rs  ruby.rs  rust.rs  typescript.rs
crates/code-maps/tests/: code_maps.rs
crates/code-maps/tests/fixtures/go/: expected.json  sample.go
crates/code-maps/tests/fixtures/javascript/: expected.json  sample.js
crates/code-maps/tests/fixtures/python/: expected.json  sample.py
crates/code-maps/tests/fixtures/ruby/: expected.json  sample.rb
crates/code-maps/tests/fixtures/rust/: expected.json  sample.rs
crates/code-maps/tests/fixtures/typescript/: expected.json  sample.ts
crates/kit-spec-engine/: Cargo.toml
crates/kit-spec-engine/schemas/: parallel.yaml.schema.json
crates/kit-spec-engine/src/: error.rs  lib.rs  slug.rs  types.rs
crates/kit-spec-engine/tests/: spec_engine.rs
crates/kit-track-engine/: Cargo.toml
crates/kit-track-engine/src/: lib.rs
crates/session-store/: Cargo.toml  MIGRATIONS.md
crates/session-store/src/: error.rs  lib.rs  migrations.rs  types.rs
crates/session-store/tests/: session_store.rs
specs/: MASTER_BLUEPRINT.md  MODULES.md  PROJECT_BRIEF.md  RESEARCH.md  ROADMAP.md  SPEC_REVISION_2026-05-08.md
specs/sessions/: .gitignore
(+49 files in other folders)
