[package]
name = "kit-track-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
git2 = "0.19"
kit-session-store = { path = "../session-store" }
kit-spec-engine = { path = "../kit-spec-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
